style(checkbox, toast): fix text not align (#1021)

--- a/src/components/toast/style/index.less
+++ b/src/components/toast/style/index.less
@@ -32,6 +32,7 @@
 
   &-icon {
     margin-right: 8px;
+    vertical-align: middle;
   }
 
   &-notice.move-up-enter.move-up-enter-active {
